Fixed dark mode switch and relocated to right side and on @media

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -162,6 +162,7 @@ footer
 }
 .switch {
     position: absolute;
+    right: 300px;
     display: inline-block;
     width: 60px;
     height: 34px;
