--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -40,6 +40,11 @@
     {
         font-size: 50px
     }
+    .switch
+    {
+        right: 75px;
+        top: 10px;
+    }
 }
 
 @media screen and (min-width: 519px) and (max-width: 996px) {
